2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp: Alter usage message handling.
	(synopsis, help): Coalesce these two functions...
	(usage): ...into this one.  Summarize purpose of program and
	steer reader to man page only if help was explicitly requested,
	rather than blitzing user with text upon a usage error.  Also
	drop option summary from usage message, as it duplicates
	groff(1).

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/utils/grog/grog.pl: Alter usage message handling.
	(help): Rename this subroutine...
	(usage): ...to this.  Summarize purpose of program and steer
	reader to man page only if help was explicitly requested, rather
	than blitzing user with text upon a usage error.  Also drop
	option summary from usage message, as it duplicates grog(1).

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/utils/grog/grog.pl: Drop relic code and comments.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	[grog]: Migrate expansion of Perl interpreter in shebang.
	Use the same technique as afmtodit, mmroff, gropdf, and pdfmom.

	* src/utils/grog/grog.am (grog): Replace "@PERL@" instead of
	'^\(#! \).*perl'.
	* src/utils/grog/grog.pl: Use "@PERL@" in shebang.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	[afmtodit]: Give program a usage message.

	* src/utils/afmtodit/afmtodit.pl: Add new scalar `want_help` of
	Boolean sense.  Recognize new long option `--help`, attached to
	`$want_help`.  Stop stripping off directory name components from
	program name when emitting diagnostics.  No other groff program
	does this (well, gropdf did until recently), and it might save
	users some confusion if they're working with multiple copies of
	afmtodit.
	(usage): New subroutine reports usage message.  If help was
	explicitly requested, summarize purpose of program and steer
	reader to man page.
